--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,10 +9,14 @@
     type="text"
     class="form-control"
     [(ngModel)]="serverName">
-<p>{{ serverName }}</p>
+<!--<p>{{ serverName }}</p>-->
 
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <p [innerText]="allowNewServer"></p>
 <p>{{ serverCreationStatus }}</p>
+
+<div *ngIf="serverCreated">
+    <p>Server was created. Server name is {{ serverName }}</p>
+</div>  
 <app-server></app-server>
 <app-server></app-server>
