dynamnic styling with ngStyles

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{ serverId }} is {{ getServerStastus() }}</p>
+<p [ngStyle]="{ backgroundColor: getColor()}">Yo Yo.Server with ID {{ serverId }} is {{ getServerStastus() }}</p>
