Access list with ngFor

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -15,7 +15,7 @@
 <p [innerText]="allowNewServer"></p>
 <p>{{ serverCreationStatus }}</p>
 
-<div *ngIf="serverCreated"; else noServer>
+<div *ngIf="serverCreated" else noServer>
     <p>Server was created. Server name is {{ serverName }}</p>
 </div>  
 <ng-template #noServer>
@@ -23,5 +23,4 @@
         No server was created!!
     </p>
 </ng-template>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
