--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -48,3 +48,7 @@
 <div>
     <span>{{ task.assignee?.name }}</span>
 </div>
+
+<div>
+    <input type="text" [appInputFormat]="'uppercase'" />
+</div>
