working on angular forms

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -52,3 +52,6 @@
 <div>
     <input type="text" [appInputFormat]="'uppercase'" />
 </div>
+<div class="container">
+    <contact-form></contact-form>
+</div>
