--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -1,12 +1,60 @@
-<form>
-	<div class="form-group">
-		<label for="">First Name</label>
-		<input required ngModel name="firstName" #firstName="ngModel" (change)="log( firstName )" id="firstName" type="text" class="form-control">	
-		<div *ngIf="firstName.touched && !firstName.value" class="alert alert-danger"><p>First name is required</p></div>
+<form #f="ngForm" (ngSubmit)="submit(f)">
+	<div ngModelGroup="contact">
+		<div *ngIf="!contact">...</div>
+		<div class="form-group">
+			<label for="">First Name</label>
+			<input 
+			required 
+			minlength="3" 
+			maxlength="10" 
+			pattern="banana"f 
+			ngModel name="firstName" 
+			#firstName="ngModel" 
+			(change)="log( firstName )" 
+			id="firstName" 
+			type="text" 
+			class="form-control"
+			>	
+			<div 
+			*ngIf="firstName.touched && !firstName.valid" 
+			class="alert alert-danger"
+			>
+			<div *ngIf="firstName.errors.required">
+				First name is required
+			</div>
+			<div *ngIf="firstName.errors.minlength">
+				First name should be minimum 3 characters long
+			</div>
+			<div *ngIf="firstName.errors.pattern">
+				First name does not	 match the pattern.
+			</div>
+		</div>	
+	</div>
+</div>
+<div class="form-group">
+	<label for="comment">Comment</label>
+	<textarea id="comment" cols="30" rows="10" class="form-control"></textarea>
+</div>
+<div class="form-group">
+	<div class="checkbox">
+		<label for="">
+			<input type="checkbox" ngModel name="isSubscribed">Subscribe to the mailing list	 
+		</label>
 	</div>
 	<div class="form-group">
-		<label for="comment">Comment</label>
-		<textarea id="comment" cols="30" rows="10" class="form-control"></textarea>
+		<label for="contactMethod"></label>
+		<select ngModel name="contactMethod" id="contactMethod" class="form-control">
+			<option *ngFor="let method of contactMethods" [value]="method.id">{{ method.name }}</option>
+		</select>
+	</div>	
+	<div class="form-group">
+		<div *ngFor="let method of contactMethods" class="radio">
+			<label>
+				<input ngModel type="radio" name="contactMethod" [value]="method.id">
+				{{ method.name }}
+			</label>
+		</div>
 	</div>
-	<button class="btn btn-primary">Submit</button>
+</div>
+<button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 </form>
