--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -2,11 +2,12 @@
 	<div class="form-group">
 		<label for="username">Username</label>
 		<input 
-			formControlName="username" 
+			formControlName="username"
 			id="username" 
 			type="text" 
 			class="form-control"
 		/>
+		<div *ngIf="username.touched && username.invalid" class="alert alert-danger">Username is required</div>
 	</div>
 	<div class="form-group">
 		<label for="password">Password</label>
