--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -7,7 +7,17 @@
 			type="text" 
 			class="form-control"
 		/>
-		<div *ngIf="username.touched && username.invalid" class="alert alert-danger">Username is required</div>
+		<div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+			<div *ngIf="username.errors.required">
+					Username is required
+			</div>
+			<div *ngIf="username.errors.minlength">
+				Username should be more than 3 characters
+			</div>
+			<div *ngIf="username.errors.cannotContainSpace">
+				Username cannot contain space
+			</div>
+		</div>
 	</div>
 	<div class="form-group">
 		<label for="password">Password</label>
