--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -17,6 +17,9 @@
 			<div *ngIf="username.errors.cannotContainSpace">
 				Username cannot contain space
 			</div>
+			<div *ngIf="username.errors.shouldBeUnique">
+				USername already taken
+			</div>
 		</div>
 	</div>
 	<div class="form-group">
