--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -1,4 +1,8 @@
-<form [formGroup]="form">	
+<form [formGroup]="form" (ngSubmit)="login()">	
+	<div *ngIf="form.errors" class="alert alert-danger">
+		The username or password is invlaid.
+		<div></div>
+	</div>
 	<div class="form-group">
 		<label for="username">Username</label>
 		<input 
@@ -7,6 +11,9 @@
 			type="text" 
 			class="form-control"
 		/>
+		<div *ngIf="username.pending">
+			Checking for uniqueness...
+		</div>
 		<div *ngIf="username.touched && username.invalid" class="alert alert-danger">
 			<div *ngIf="username.errors.required">
 					Username is required
@@ -18,7 +25,7 @@
 				Username cannot contain space
 			</div>
 			<div *ngIf="username.errors.shouldBeUnique">
-				USername already taken
+				Username already taken
 			</div>
 		</div>
 	</div>
