making an http request

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -58,3 +58,6 @@
 <signup-form></signup-form>
 <new-course-form></new-course-form>
 <form-builder></form-builder>
+<div class="container">
+    <post-component></post-component>
+</div>
