--- a/hello-world/src/app/post-component/post-component.component.html
+++ b/hello-world/src/app/post-component/post-component.component.html
@@ -1,8 +1,23 @@
+<input 
+	type="text" 
+	class="form-control"
+	#title
+	(keyup.enter)="createPost( title )"	
+/>
 <ul class="list-group">	
 	<li
 		class="list-group-item"
 		*ngFor="let post of posts"
 	>
+	<button 
+		class="btn btn-sm"
+		(click)="updatePost( post )"	
+	>Update</button>
 	{{ post.title  }}
+
+	<button 
+		class="btn btn-sm"
+		(click)="deletePost( post )"	
+	>Delete</button>
 	</li>
 </ul>
