--- a/route-app/src/app/navbar-component/navbar-component.component.html
+++ b/route-app/src/app/navbar-component/navbar-component.component.html
@@ -1,3 +1,23 @@
-<p>
-  navbar-component works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<a class="navbar-brand" href="#">Navbar</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item" routerLinkActive="active current">
+				<a class="nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item" routerLinkActive="active current">
+				<a class="nav-link" routerLink="/profile">Profile</a>
+			</li>
+			<li class="nav-item" routerLinkActive="active current">
+					<a class="nav-link" routerLink="/profile/arjun">Particular Profile</a>
+			</li>
+			<li class="nav-item" routerLinkActive="active current">
+				<a class="nav-link" routerLink="/posts">Post</a>
+			</li>
+		</ul>
+	</div>
+</nav>
