implemented mnulitple routing

--- a/route-app/src/app/navbar-component/navbar-component.component.html
+++ b/route-app/src/app/navbar-component/navbar-component.component.html
@@ -18,6 +18,9 @@
 			<li class="nav-item" routerLinkActive="active current">
 				<a class="nav-link" routerLink="/posts">Post</a>
 			</li>
-		</ul>
+			<li class="nav-item" routerLinkActive="active current">
+				<a class="nav-link" routerLink="/followers/13342/kinny94">Multiple</a>
+			</li>
+		</ul>	
 	</div>
 </nav>
