working with switch map and multiple routes

--- a/route-app/src/app/navbar-component/navbar-component.component.html
+++ b/route-app/src/app/navbar-component/navbar-component.component.html
@@ -19,7 +19,7 @@
 				<a class="nav-link" routerLink="/posts">Post</a>
 			</li>
 			<li class="nav-item" routerLinkActive="active current">
-				<a class="nav-link" routerLink="/followers/13342/kinny94">Multiple</a>
+				<a class="nav-link" routerLink="/followers/13342/kinny94" [queryParams]="{ page: 1, order: 'newest'}">Multiple</a>
 			</li>
 		</ul>	
 	</div>
