--- a/authentication-app/src/app/login-component/login-component.component.html
+++ b/authentication-app/src/app/login-component/login-component.component.html
@@ -1,3 +1,17 @@
-<p>
-  login-component works!
-</p>
+<div class="container">
+		<form class="form-signin" #f="ngForm" (ngSubmit)="signIn( f.value )">
+				<h2 class="form-signin-heading">Please sign in</h2>
+			
+				<div *ngIf="invalidLogin" class="alert alert-danger">
+					Invalid username and/or password
+				</div>
+			
+				<label for="inputEmail">Email address</label>
+				<input type="email" id="inputEmail" name="email" ngModel class="form-control" />
+				
+				<label for="inputPassword">Password</label>
+				<input type="password" id="inputPassword" name="password" ngModel class="form-control"/>
+			
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+			</form>
+</div>
