--- a/angular-core/src/app/course-card/course-card.component.html
+++ b/angular-core/src/app/course-card/course-card.component.html
@@ -6,4 +6,5 @@
   <div class="course-description">
     {{ course.longDescription }}
   </div>
+  <button (click)="onCourseClicked()">View Course</button> 
 </div>
