--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -4,7 +4,14 @@
 </div>
 
 <div class="courses">
-  <course-card (courseSelected)="onCourseSelected($event)" [course]="rxjsCourse"></course-card>
-  <course-card (courseSelected)="onCourseSelected($event)" [course]="coreCourse"></course-card>
-  <course-card (courseSelected)="onCourseSelected($event)" [course]="ngrxCourse"></course-card>
+  <course-card 
+    *ngFor="let course of courses; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
+    [class.is-first]="isFirst"
+    [class.is-last]="isLast"
+    [class.is-even]="isEven"
+    [class.is-odd]="isOdd"
+    (courseSelected)="onCourseSelected($event)" 
+    [course]="course"
+    [courseIndex]="i + 1">
+  </course-card>
 </div>
