--- a/angular-core/src/app/course-card/course-card.component.html
+++ b/angular-core/src/app/course-card/course-card.component.html
@@ -1,10 +1,12 @@
-<div class="course-card">
+<div class="course-card" *ngIf="course">
   <div class="course-title">
-    {{ courseIndex + ' ' + course.title }}
+    {{ courseIndex + ' ' + course.description }}
   </div>
-  <img width="300" alt="Angular Logo" [src]="course.iconUrl">
+  <img *ngIf="isImageVisible(); else noImage" width="300" alt="Angular Logo" [src]="course.iconUrl">
+  <ng-template #noImage>No Image Available</ng-template>
+  
   <div class="course-description">
-    {{ course.longDescription }}
+    {{ course?.longDescription }}
   </div>
   <button (click)="onCourseClicked()">View Course</button> 
 </div>
