--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -4,7 +4,10 @@
 </div>
 
 <div class="courses">
-  <course-card 
+  <course-card
+    (courseSelected)="onCourseSelected($event)" [course]="courses[0]" [courseIndex]="1">
+  ></course-card>
+  <!-- <course-card 
     *ngFor="let course of courses; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
     [class.is-first]="isFirst"
     [class.is-last]="isLast"
@@ -13,5 +16,5 @@
     (courseSelected)="onCourseSelected($event)" 
     [course]="course"
     [courseIndex]="i + 1">
-  </course-card>
+  </course-card> -->
 </div>
