--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -3,11 +3,9 @@
   src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 </div>
 
-<div class="courses">
-  <course-card
-    (courseSelected)="onCourseSelected($event)" [course]="courses[0]" [courseIndex]="1">
-  ></course-card>
-  <!-- <course-card 
+<div class="courses" #container>
+  <course-card 
+    #cardRef
     *ngFor="let course of courses; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
     [class.is-first]="isFirst"
     [class.is-last]="isLast"
@@ -16,5 +14,5 @@
     (courseSelected)="onCourseSelected($event)" 
     [course]="course"
     [courseIndex]="i + 1">
-  </course-card> -->
+  </course-card>
 </div>
