--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -13,6 +13,8 @@
     [class.is-odd]="isOdd"
     (courseSelected)="onCourseSelected($event)" 
     [course]="course"
-    [courseIndex]="i + 1">
+    [courseIndex]="i + 1"
+  >
+    <img #courseImage *ngIf="course.iconUrl; else noImage" width="300" alt="Angular Logo" [src]="course.iconUrl">
   </course-card>
 </div>
