--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -11,6 +11,7 @@
   </ng-template>
 
   <course-card 
+    [highlighted]="true"
     #cardRef
     *ngFor="let course of courses; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
     [class.is-first]="isFirst"
