crating a custom structural directive

--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -25,7 +25,7 @@
     [courseIndex]="i + 1"
     [noImageTemplate]="blankImage"
     > 
-    <course-image [src]="course.iconUrl"></course-image>
+    <course-image [src]="course.iconUrl" *ngxUnless="!course.iconUrl"></course-image>
     <div class="course-description" (click)="highlighter.toggle()">
       {{ course.longDescription }}
     </div>
