--- a/angular-core/src/app/app.component.html
+++ b/angular-core/src/app/app.component.html
@@ -3,7 +3,7 @@
   src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 </div>
 
-<div class="courses" #container *ngIf="courses">
+<div class="courses" #container *ngIf="courses$ | async">
   
   <ng-template #blankImage let-courseName="description">
     <p class="warn">{{ courseName }} has no Image Available</p>
@@ -15,7 +15,7 @@
     #highlighter="hl"
     (toggleHighlight)="onToggle($event)"
     #cardRef
-    *ngFor="let course of courses; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
+    *ngFor="let course of courses$ | async; index as i; first as isFirst; last as isLast; even as isEven; odd as isOdd" 
     [class.is-first]="isFirst"
     [class.is-last]="isLast"
     [class.is-even]="isEven"
