--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,9 +1,46 @@
-<div fxFlex fxLayout="row">
-  <div fxFlex="50">
-    <p>Here I'll show the todos list</p>
-  </div>
-  <div fxFlex="50">
+<div fxFlexFill fxLayout="column" fxLayoutGap="30px">
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Todo application</span>
+  </mat-toolbar>
 
-    <p>Here I'll show the completed todo's list</p>
+  <div fxFlex fxLayout="row">
+
+    <div fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
+      <div fxLayout="column">
+        <button mat-raised-button color="primary" (click)="onClick()">Create Todo</button>
+      </div>
+      <div fxFlex fxLayout="column" fxLayoutGap="25px">
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
+      </div>
+     
+    </div>
+
+    <div fxFlex fxLayout="column" fxLayoutAlign="center center">
+      <div fxLayout="column">
+        <p>Completed Todos!!</p>
+      </div>
+      <div fxFlex fxLayout="column" fxLayoutGap="25px">
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+        <p class="completed">Create a todo application!</p>
+      </div>
+    </div>
   </div>
 </div>
+  
+
+
