--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -7,37 +7,11 @@
   </mat-toolbar>
 
   <div fxFlex fxLayout="row">
-
-    <div fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
-      <div fxLayout="column">
-        <button mat-raised-button color="primary" (click)="onClick()">Create Todo</button>
-      </div>
-      <div fxFlex fxLayout="column" fxLayoutGap="25px">
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-        <p><mat-checkbox class="example-margin" [(ngModel)]="checked">Create a Todo Application!!</mat-checkbox></p>
-      </div>
-     
+    <div fxFlex fxLayoutAlign="center start">
+      <app-todolist></app-todolist>
     </div>
-
-    <div fxFlex fxLayout="column" fxLayoutAlign="center center">
-      <div fxLayout="column">
-        <p>Completed Todos!!</p>
-      </div>
-      <div fxFlex fxLayout="column" fxLayoutGap="25px">
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-        <p class="completed">Create a todo application!</p>
-      </div>
+    <div fxFlex fxLayoutAlign="center start">
+      <app-completed-todos></app-completed-todos>
     </div>
   </div>
 </div>
