filter cahnges and add mat-cards

--- a/github-api-demo/src/app/app.component.html
+++ b/github-api-demo/src/app/app.component.html
@@ -1,13 +1,19 @@
-<div fxFlexFill fxLayout="column" fxLayoutGap="30px">
-  <mat-toolbar color="primary">
-    <button mat-icon-button>
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Github Api Demo</span>
-  </mat-toolbar>
+<mat-toolbar color="primary">
+  <button mat-icon-button>
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Github Api Demo</span>
+</mat-toolbar>
+
+<div fxLayout="column" fxLayoutGap="25px">  
+  <app-users-component></app-users-component>
+</div>
+
+
+<!-- <div fxFlexFill fxLayout="column" fxLayoutGap="30px">
 
   
   <div fxFlex fxLayout="row">
     <app-users-component></app-users-component>
   </div>
-</div>
+</div> -->
