--- a/github-api-demo/src/app/components/users-component/user-card/user-card.component.html
+++ b/github-api-demo/src/app/components/users-component/user-card/user-card.component.html
@@ -1,19 +1,16 @@
-<mat-card>
+<mat-card class="user-card__component mat-elevation-z3">
   <mat-card-header>
-    <div mat-card-avatar></div>
-    <mat-card-title>{{ user.id }}</mat-card-title>
-    <mat-card-subtitle>{{ user.username }}</mat-card-subtitle>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>{{ user.username }}</mat-card-title>
+    <mat-card-subtitle>{{ user.id }}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{ user.avatarUrl}}" alt="Photo of a Shiba Inu">
+  <img mat-card-image src="{{ user.avatarUrl }}" alt="Photo of a Shiba Inu">
   <mat-card-content>
     <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
+      Some text goes in here!!
     </p>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+  <mat-card-actions fxLayoutAlign="center">
+    <button mat-raised-button color="primary">Go to profile</button>
   </mat-card-actions>
 </mat-card>
