--- a/github-api-demo/src/app/components/users-component/users-component.component.html
+++ b/github-api-demo/src/app/components/users-component/users-component.component.html
@@ -1,10 +1,15 @@
-<div fxFlex> 
-  <ng-container *ngIf="(users$ | async)?.length != 0; else loading">
-    <div fxLayout="row wrap" fxLayoutGap="25px">
-      <div fxFlex="calc(25% - 25px)" *ngFor="let user of users$ | async"> 
-        <app-user-card [user]="user"></app-user-card>
-      </div>
+<div fxLayout="column" fxLayoutGap="25px" class="user-component__container">
+  <div fxLayout="row" class="user-component__form-field">
+    <mat-form-field fxFlex appearance="fill">
+      <mat-label>Input</mat-label>
+      <input [formControl]="filterControl" matInput>
+    </mat-form-field>
+  </div>
+
+  <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="20px" fxLayoutAlign="center">
+    <div *ngFor="let user of dataSource$ | async" fxFlex="calc(20% - 20px)" fxFlex.lt-md="calc(33% - 20px)" fxFlex.sm="calc(50% - 20px)" fxFlex.xs="calc(100% - 20px)">
+      <app-user-card [user]="user"></app-user-card>
     </div>
-  </ng-container>
-  <ng-template #loading><mat-spinner></mat-spinner></ng-template>
+  </div>
+
 </div>
