get repos and userdata

--- a/github-api-demo/src/app/app.component.html
+++ b/github-api-demo/src/app/app.component.html
@@ -6,7 +6,9 @@
 </mat-toolbar>
 
 <div fxLayout="column" fxLayoutGap="25px">  
-  <app-users-component></app-users-component>
+  <div fxFlex>
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 
