--- a/github-api-demo/src/app/components/users-component/user-card/user-card.component.html
+++ b/github-api-demo/src/app/components/users-component/user-card/user-card.component.html
@@ -11,6 +11,6 @@
     </p>
   </mat-card-content>
   <mat-card-actions fxLayoutAlign="center">
-    <button mat-raised-button color="primary">Go to profile</button>
+    <button mat-raised-button color="primary" routerLink="/user/{{user.username}}">Go to profile</button>
   </mat-card-actions>
 </mat-card>
