weather app completed

--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Weather App Demo</span>
+  <span (click)="routeToHome()">Weather App Demo</span>
 </mat-toolbar>
 
 <div fxLayout="column">
